...
        let label = UILabel()
        label.font = .verdanaBold(ofSize: 28)
        label.textColor = .black
        return label
    }()

    private lazy var tableView: UITableView = {
        let tableView = UITableView()
        tableView.dataSource = self
        tableView.accessibilityIdentifier = "tableView"
        tableView.delegate = self
        tableView.register(RecipeCell.self, forCellReuseIdentifier: RecipeCell.reuseID)
        tableView.register(RecipeShimmeredCell.self, forCellReuseIdentifier: RecipeShimmeredCell.reuseID)
...
            cell.configure(withRecipe: recipe)
            return cell
        case .noData:
            guard let cell = tableView
                .dequeueReusableCell(withIdentifier: MessageTableViewCell.reuseID) as? MessageTableViewCell
            else { return .init() }
            if let search = searchBar.text, !search.isEmpty {
                cell.configureCell(messageViewConfig: Constants.notFoundMessageConfig)
            } else {
                cell.configureCell(messageViewConfig: Constants.noDataMessageConfig)
            }
            cell.delegate = self
            return cell
...
