...
// Copyright © RoadMap. All rights reserved.

import UIKit

/// Расширения для быстрого доступа к картинкам
extension UIImage {
    static let bookmarkBarIcon = UIImage(named: "bookmarkBarIcon")
    static let bookmarkFullBarIcon = UIImage(named: "bookmarkFullBarIcon")
    static let cakeBarIcon = UIImage(named: "cakeBarIcon")
    static let cakeFullBarIcon = UIImage(named: "cakeFullBarIcon")
    static let profileBarIcon = UIImage(named: "profileBarIcon")
    static let profileFullBarIcon = UIImage(named: "profileFullBarIcon")
    static let emailImage = UIImage(named: "envelop")
...
    static let soup = UIImage(named: "soup")
    static let stackUp = UIImage(named: "stackUp")
    static let stackDown = UIImage(named: "stackDown")
    static let timer = UIImage(named: "timer")
    static let pizza = UIImage(named: "pizza")
    static let chevronBold = UIImage(named: "chevronBold")
    static let arrowBack = UIImage(named: "arrowBack")
    static let pot = UIImage(named: "pot")
    static let timerPdf = UIImage(named: "timerPdf")
    static let paperplane = UIImage(systemName: "paperplane")
    static let bookmarkSquare = UIImage(named: "bookmarkSquare")
    static let searchSquare = UIImage(named: "searchSquare")
    static let xMark = UIImage(systemName: "xmark")
...
