...
    private let emptyMessageView = MessageView(config: MessageViewConfig(
        icon: .bookmarkSquare,
        title: Constants.emptyPageTitle,
        description: Constants.emptyPageDescription
    ))

    private lazy var tableView: UITableView = {
        let tableView = UITableView()
        tableView.dataSource = self
        tableView.delegate = self
        tableView.register(RecipeCell.self, forCellReuseIdentifier: RecipeCell.reuseID)
        tableView.separatorStyle = .none
        tableView.isHidden = true
...
