...
import UIKit

/// Сборщик модуля авторизации
final class ModuleBuilder {
    private enum Constants {
        static let recipesTitle = "Recipes"
        static let favoritrsTitle = "Favorites"
        static let profileTitle = "Profile"
    }

    static func makeLoginModule(coordinator: AuthCoordinator) -> UIViewController {
        let viewController = LoginViewController()
        let presenter = LoginPresenter(view: viewController, coordinator: coordinator)
        viewController.presenter = presenter
...
